--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 DATABASE_URL="mongodb+srv://yashaga0204:mnd2qILOrIObwXlK@clusterbms.xkjw44t.mongodb.net/?retryWrites=true&w=majority&appName=ClusterBMS"
+JWT_SECRET="scalermovies"
